# frcGen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  pch.h
templates/: .frcGen.json  wpiLib.LICENSE
templates/command/: templateCommand.cpp  templateCommand.h
templates/subsystem/: templateSubsystem.cpp  templateSubsystem.h
